--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="todo-app">
-        <h2>To-Do List <img src="images/icon.png"></h2>
+        <h2>To-Do List <img src="icon.png"></h2>
         <div class="input-area">
         <input type="text" id="input-box" placeholder="Add your task">
         <button onclick="addTask()">Add +</button>
